# freqai-strategies

./: .gitignore  README.md
.github/: copilot-instructions.md
.serena/: project.yml
ReforceXY/: Dockerfile.reforcexy  docker-compose.yml
ReforceXY/docker/: Dockerfile.custom
ReforceXY/reward_space_analysis/: README.md  pyproject.toml  reward_space_analysis.py  test_cli.py  test_reward_alignment.py  test_reward_space_analysis.py  test_reward_space_analysis_cli.py  test_stat_coherence.py
ReforceXY/reward_space_analysis/tests/: __init__.py  conftest.py  test_api_helpers.py  test_base.py  test_integration.py  test_pbrs.py  test_reward_components.py  test_robustness.py  test_statistics.py  test_utilities.py
ReforceXY/user_data/: config-template.json
ReforceXY/user_data/freqaimodels/: ReforceXY.py
ReforceXY/user_data/strategies/: RLAgentStrategy.py
quickadapter/: Dockerfile.quickadapter  docker-compose.yml
quickadapter/docker/: Dockerfile.custom
quickadapter/docs/:  labeling_window.txt  labeling_window.txt
quickadapter/user_data/: config-template.json
quickadapter/user_data/freqaimodels/: LightGBMRegressorQuickAdapterV3.py  LightGBMRegressorQuickAdapterV35.py  QuickAdapterRegressorV3.py  XGBoostRegressorQuickAdapterV3.py  XGBoostRegressorQuickAdapterV35.py
quickadapter/user_data/strategies/: QuickAdapterV3.py  Utils.py
scripts/: docker-upgrade.sh
