[project]
name = "reward_space_analysis"
version = "0.1.0"
description = "Reward space analysis for ReforceXY trading strategy"
authors = [
    {name = "Jerome Benoit", email = "jerome.benoit@sap.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "pytest",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "ruff",
    "coverage",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "."
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage configuration
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
